/*
 * $Id: ChangeLog,v 1.6503 2009/07/13 19:38:38 jfgimenez Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-07-13 22:12 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * source/vm/extend.c
    * hb_parcx() to return "" on invalid array element argument (thnx to report by Saulius)

2009-07-13 21:40 UTC+0100 Jose F. Gimenez <jfgimenez/at/wanadoo.es>
  * source/rtl/txml.prg
    ! Silly mistake in my previous commit

2009-07-13 20:00 UTC+0300 Pavel Tsarenko <tpe2/at/mail.ru>
  + source/codepage/cpua1125.c
  + source/codepage/uc1125.c
  * source/codepage/Makefile
  * include/hbapicdp.h
  * common.mak
  * compile.mak
    + added DOS Ukrainian 1125 codepage

2009-07-13 12:20 UTC+0100 Jose F. Gimenez <jfgimenez/at/wanadoo.es>
  * source/rtl/txml.prg
    ! When TXmlDocument():Write() is called with a opened file handle, do not close the file

2009-07-12 10:03 UTC+0300 Pavel Tsarenko <tpe2/at/mail.ru>
  * source/ct/Makefile
    * updated dependency for blank.c

2009-07-12 10:00 UTC+0300 Pavel Tsarenko <tpe2/at/mail.ru>
  * compile.mak
  - source/ct/blank.prg
  + source/ct/blank.c
    * Blank() function rewritten in C
  * contrib\rdd_ads\adsfunc.c
    * removed unnecessary Oem to Ansi convertation in sql functions

2009-07-11 18:25 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * source/rtl/set.c
    ! Fixed GPF traps
  * utils/xbscript/xbscript.prg
    * Corrected typo in pre-burnt DO <file>.prg rule in InitRunRules() and InitDptRules()
  * utils/xbscript/rp_dot.src
  * utils/xbscript/rp_run.src
    + Added support for DO <file>.prg WITH ...

2009-07-10 10:49 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * Corrected HB_FUNC( HB_UNCOMPRESS ) to use hb_retclenAdopt() instead of hb_retclenAdoptRaw()

2009-07-06 10:06 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * source/rtl/file.c