@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6503 2009/07/13 19:38:38 jfgimenez Exp $
+ * $Id: ChangeLog,v 1.6504 2009/07/14 02:44:28 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2009-07-14 08:03 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
+  * source/vm/extend.c
+    * Simplified latest change to pacify POCC compiler error
 
 2009-07-13 22:12 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
   * source/vm/extend.c
